gcc/testsuite/gdc.test/compilable/ice13792.d
enum E;

void main()
{
    E* p;  // ICE in glue layer
}
