gcc/testsuite/gdc.test/fail_compilation/failinout3748b.d
void main()
{
    inout(int)* err11;
}
